# langchain-playground

./: README.md
RAG/: pyproject.toml
RAG/rag/: rag.py  rag_pre.py
Translator/: pyproject.toml
Translator/translator/static/: audio.webm
Translator/translator/static/css/: style.css
Translator/translator/static/js/: main.js
Translator/translator/templates/: index.html
