[tool.poetry]
name = "translator"
version = "0.1.0"
description = ""
authors = ["Charles Wang <charleswang007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
python-dotenv = "^1.0.1"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
